Fix institutions list overflow style

--- a/src/app/components/institution-hierarchy/institution-hierarchy.component.scss
+++ b/src/app/components/institution-hierarchy/institution-hierarchy.component.scss
@@ -16,5 +16,9 @@
 .institution {
   height: 21px;
   cursor: pointer;
+  text-overflow: ellipsis;
+  overflow: hidden; 
+  width: 85%; 
+  white-space: nowrap;
 }
   
